last modification (tache 2 fini)

--- a/documentation.html
+++ b/documentation.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <h1>Documentation des Méthodes Testées</h1>
-<h1>Classe coverage total : </code></h1>
+<h1>coverage total : </code></h1>
 <img src="img-documentation/coverage.png" alt="C">
 
 <h2>Classe <code>LoadScratch2</code></h2>
